.provarCaches/00D410000011HE0EAM/objects/rstk__soinvsched__c.object
<CustomObject>
    <description>soinvsched__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_duedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_invoice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Invoice Payment Schedules</relationshipLabel>
        <relationshipName>Invoice_Payment_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_payseq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Payment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvsched_salesacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>syacc_salesacct_soinvsched</relationshipLabel>
        <relationshipName>syacc_salesacct_soinvsched</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice Payment Schedule</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Payment Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Payment Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>